--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,10 @@
         "nesbot/carbon": "^2.64"
     },
     "require-dev": {
-        "illuminate/console": "^8.0|^9.0",
-        "illuminate/contracts": "^8.0|^9.0",
-        "illuminate/support": "^8.0|^9.0",
-        "orchestra/testbench": "^6.2|^7.18",
+        "illuminate/console": "^9.0",
+        "illuminate/contracts": "^9.0",
+        "illuminate/support": "^9.0",
+        "orchestra/testbench": "^7.18",
         "phpstan/phpstan": "^1.9",
         "phpunit/phpunit": "^8.0|^9.0",
         "squizlabs/php_codesniffer": "^3.5"
