--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "laravel-schedule-testing-documentation",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "Do Not Harm",
+  "license": "MIT",
   "scripts": {
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
